# BonsaiWorkspace

./: .gitignore  BonsaiBotAudit.md  BonsaiBotFinalDesign.md  BonsaiBotImplementationChecklist.md  BonsaiBuddyFullProductionUpgradePlan.md  BonsaiExeLauncherBuilder.ps1  Bonsai_Assistant.md  Bonsai_Assistant_Audit.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Claude_Comprehensive_Audit_Plan.md  DeepSeek.md  Generate-BonsaiDesktopShortcut.ps1  Launch-BonsaiWorkspace.cmd  Launch-BonsaiWorkspace.ps1  README.md  Runner-Streaming_System.md  SECURITY.md  Spatial_Code_Canvas_Suggestions.md  bb.edn  bonsai_autopilot.ps1  features.yaml  justfile  launch.ps1  parse_check.ps1  run_handle.ps1  test_daemon_local.py  test_writehost.ps1
.cargo/: config.toml
Plans/: BonsaiBot.md  BonsaiBuddyFullProductionUpgradePlanAudit.md  BonsaiMessagingBotServer.md  BonsaiMessagingBotServerAudit.md  Cluster-Orchestrator-Design.md  Multi-Agent_Swarm.md  Runner-Streaming_System.md  Spatial_Code_Canvas.md  context-skill-design.md
bonsai-bot/: Cargo.toml  MAIL_SERVER_PROD_PLAN.md
bonsai-bot/.cargo/: audit.toml
bonsai-bot/.github/workflows/: ci.yml
bonsai-bot/src/: admin_api.rs  buddy_client.rs  config.rs  dedup.rs  formatter.rs  health.rs  lib.rs  main.rs  metrics.rs  mgmt_client.rs  port_manager.rs  router.rs  sanitizer.rs  scheduler.rs  session.rs  swarm_client.rs
bonsai-bot/tests/: integration_bot.rs  integration_runtime.rs
bonsai-buddy-android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
bonsai-runtime/: Cargo.toml
bonsai-runtime/src/: lib.rs
bonsai-runtime/tests/: wasm_integration.rs
bonsai-workspace/: .gitignore  Custom-WebView-System-Design.md  README.md  bonsai-workspace.agent.md  bonsai-workspace.prompt.md  instruction_manual.md  launcher_manual.md  playwright-debug.js  user_manual.md
bonsai-workspace/src-tauri/: Cargo.toml  build.rs  checksums.json  package-lock.json  tauri.conf.json
bonsai-workspace/src-tauri/capabilities/: default.json
bonsai-workspace/src-tauri/src/: action_parser.rs  agent.rs  agent_connect.rs  agent_host.rs  agent_store.rs  api_server.rs  assistant_audit_log.rs  assistant_backup.rs  assistant_commands.rs  assistant_manager.rs  assistant_metrics.rs  assistant_policy.rs  assistant_store.rs  assistant_tools.rs  auth_commands.rs  avatar_validator.rs  belief_reviser.rs  bonsai_core.rs  bootstrap.rs  buddy_api_server.rs  capability_commands.rs  chat_sessions.rs  cluster_orchestrator.rs  commands.rs  config.rs  context_builder.rs  continuous_training.rs  crash_recovery.rs  data_curator.rs  device_manager.rs  dual_inference.rs  error.rs  eternal_training_loop.rs  evaluation_harness.rs  expanded_tools.rs  features.rs  federated_trainer.rs  forgetting_prevention.rs  games.rs  gpu_controller.rs  (+69 more)
bonsai-workspace/src-tauri/src/agents/: code_reviewer.rs  code_writer.rs  mod.rs
bonsai-workspace/src-tauri/src/launcher/: bonsai_specs.rs  component.rs  mod.rs  supervisor.rs
bonsai-workspace/src-tauri/src/tools/: ai_code_tools.rs  creative_ext_tools.rs  data_science_tools.rs  security_tools.rs  web_ext_tools.rs
bonsai-workspace/src-tauri/tests/: sylva_chess_integration.rs
bootstrap/: check_invariants.ps1
browser-extension/: README.md  options.html  (+9 more)
crates/bonsai-actors/: Cargo.toml
crates/bonsai-actors/src/: checkpoint.rs  lib.rs  supervisor.rs  swap_buffer.rs  transport.rs
crates/bonsai-capability-registry/: Cargo.toml
crates/bonsai-capability-registry/src/: lib.rs  trust_score.rs
crates/bonsai-cas/: Cargo.toml
crates/bonsai-cas/src/: lib.rs
crates/bonsai-chess/: Cargo.toml
crates/bonsai-chess/src/: distributed_self_play.rs  error.rs  game_session.rs  lib.rs  mcts.rs  network.rs  position.rs
crates/bonsai-ci/: Cargo.toml
crates/bonsai-ci/src/: lib.rs
crates/bonsai-creator/: Cargo.toml
crates/bonsai-creator/shaders/: gaussian_full.wgsl
crates/bonsai-creator/src/: audio.rs  composer.rs  fine_tuning.rs  gaussian.rs  gaussian_pipeline.rs  guardian.rs  image.rs  lib.rs  model_fetch.rs  progress.rs  three_d.rs  video.rs
crates/bonsai-dataframe/: Cargo.toml
crates/bonsai-dataframe/src/: error.rs  frame.rs  io.rs  lazy.rs  lib.rs  ops.rs
crates/bonsai-go/: Cargo.toml
crates/bonsai-go-nn/: Cargo.toml
crates/bonsai-go-nn/src/: evaluator.rs  lib.rs  model.rs  train.rs  training_loop.rs
crates/bonsai-go/src/: board.rs  error.rs  game_session.rs  lib.rs  mcts.rs  network.rs  neural.rs
crates/bonsai-knowledge/: Cargo.toml
crates/bonsai-knowledge/src/: graph.rs  lib.rs  types.rs
crates/bonsai-mailbox/: Cargo.toml
crates/bonsai-mailbox/src/: envelope.rs  error.rs  lib.rs  mailbox.rs
crates/bonsai-p2p/: Cargo.toml
crates/bonsai-p2p/src/: lib.rs  onion.rs  swarm.rs  webrtc.rs
crates/bonsai-query/: Cargo.toml
crates/bonsai-query/src/: datalog.rs  lib.rs  sql.rs
crates/bonsai-relay/: Cargo.toml
crates/bonsai-relay/src/: client.rs  error.rs  lib.rs  server.rs  token.rs
crates/bonsai-ring/: Cargo.toml
crates/bonsai-ring/src/: lib.rs
crates/bonsai-skill-compiler/: Cargo.toml
crates/bonsai-skill-compiler/src/: distill.rs  extractor.rs  lib.rs  parser.rs  security.rs  wasm_gen.rs
crates/bonsai-skills/: Cargo.toml
crates/bonsai-skills/src/: executor.rs  lib.rs
crates/bonsai-sylva/: Cargo.toml
crates/bonsai-sylva/src/: ast.rs  debugger.rs  lexer.rs  lib.rs  parser.rs  stdlib.rs  vm.rs
crates/bonsai-tool-registry/: Cargo.toml
crates/bonsai-tool-registry/src/: lib.rs
crates/bonsai-transfer-core/: Cargo.toml
crates/bonsai-transfer-core/src/: error.rs  gsn.rs  lane.rs  lib.rs  reassembly.rs  scheduler.rs  transfer.rs
crates/bonsai-transfer-crypto/: Cargo.toml
crates/bonsai-transfer-crypto/src/: cipher.rs  error.rs  identity.rs  kdf.rs  lib.rs  session.rs
crates/bonsai-transfer-store/: Cargo.toml
crates/bonsai-transfer-store/src/: lib.rs  store.rs
crates/bonsai-watchdog/: Cargo.toml
crates/bonsai-watchdog/src/: kb.rs  main.rs  repair.rs  tests.rs
src-daemon/: Cargo.toml
src-daemon/src/: binary_swap.rs  checkpoint_impl.rs  health_monitor.rs  main.rs  panic_hook.rs  rpc.rs  state.rs
(+311 files in other folders)
