[workspace]
members = [
  "bonsai-bot",
  "bonsai-runtime",
  "bonsai-workspace/src-tauri",
]

# Workspace-level dependency alignment to avoid duplicate native-linked crates
[workspace.dependencies]
# Force libsqlite3-sys to a single version with bundled SQLite for consistency
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
