[workspace]
members = [
  "bonsai-bot",
  "bonsai-runtime",
  "bonsai-workspace/src-tauri",
]
resolver = "2"

# Workspace-level dependency alignment: single libsqlite3-sys version prevents
# native-link conflicts when all three crates are built together.
[workspace.dependencies]
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Profiles must live in the workspace root; per-package profiles are ignored.
# dev: reduce debug info to line tables (debug=1) to avoid rustc OOM on
# machines with limited RAM. Full DWARF (debug=2, the default) can consume
# several GB for a crate with this many dependencies. Line tables still give
# useful file:line backtraces for panics and Tauri crashes.
[profile.dev]
debug         = 1        # line tables only; =2 (default) doubles rustc peak RSS
codegen-units = 4        # limit parallel codegen units; default can spike RSS further
incremental   = true
opt-level     = 0

# Keep dependencies lightly optimised to reduce their own code-gen memory hit.
[profile.dev.package."*"]
opt-level     = 1
debug         = false    # no debug info for deps — cuts total RSS significantly

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.ci-local]
inherits      = "test"
debug         = 0
incremental   = true
codegen-units = 16
opt-level     = 0
