[workspace]
members = [
  "bonsai-bot",
  "bonsai-native",
  "bonsai-runtime",
  "bonsai-workspace/src-tauri",
  "crates/bonsai-capability-registry",
  "crates/bonsai-query",
  "crates/bonsai-ir",
  "crates/bonsai-cas",
  "crates/bonsai-verify",
  "crates/bonsai-crdt",
  "crates/bonsai-actors",
  "crates/bonsai-skill-compiler",
  "crates/bonsai-chess",
  "crates/bonsai-go",
  "crates/bonsai-go-nn",
  "crates/bonsai-knowledge",
]
resolver = "2"

# Workspace-level dependency alignment: single libsqlite3-sys version prevents
# native-link conflicts when all three crates are built together.
[workspace.dependencies]
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Profiles must live in the workspace root; per-package profiles are ignored.
# dev: reduce debug info to line tables (debug=1) to avoid rustc OOM on
# machines with limited RAM. Full DWARF (debug=2, the default) can consume
# several GB for a crate with this many dependencies. Line tables still give
# useful file:line backtraces for panics and Tauri crashes.
[profile.dev]
debug         = 1        # line tables only; =2 (default) doubles rustc peak RSS
codegen-units = 4        # limit parallel codegen units; default can spike RSS further
incremental   = true
opt-level     = 0

# Dependencies: no debug info, no optimisation, single codegen unit.
# opt-level=1 requires optimisation passes that consume extra memory; keeping
# it at 0 minimises per-crate RSS. codegen-units=1 prevents each dep rustc
# invocation from spawning internal parallel threads on top of cargo's own
# job parallelism (capped at 2 via .cargo/config.toml).
[profile.dev.package."*"]
opt-level     = 0
debug         = false
codegen-units = 1

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.ci-local]
inherits      = "test"
debug         = 0
incremental   = true
codegen-units = 16
opt-level     = 0
