[package]
name    = "bonsai-bot"
version = "0.1.0"
edition = "2021"

[features]
default  = ["discord", "telegram", "email"]
discord  = ["dep:serenity"]
telegram = ["dep:teloxide"]
matrix   = ["dep:matrix-sdk"]
email    = ["dep:async-imap", "dep:async-native-tls"]
all      = ["discord", "telegram", "matrix", "email"]

[dependencies]
tokio              = { version = "1",    features = ["full"] }
reqwest            = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
axum               = { version = "0.7",  features = ["macros", "json"] }
serde              = { version = "1.0",  features = ["derive"] }
serde_json         = "1.0"
rusqlite          = { version = "0.30", features = ["bundled"] }
tokio-rusqlite    = "0.5"
keyring            = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter", "json"] }
async-trait        = "0.1"
uuid               = { version = "1",    features = ["v4"] }
chrono             = { version = "0.4",  features = ["serde"] }
tokio-util         = { version = "0.7", features = ["compat"] }
futures            = "0.3"
governor           = "0.6"
dashmap            = "5"
unicode-normalization = "0.1"
regex              = "1"
once_cell          = "1"
sha2               = "0.10"
hex                = "0.4"
lettre             = { version = "0.11", features = ["smtp-transport", "rustls-tls", "builder"] }
rand               = "0.8"
dirs               = "5"
tower-http         = { version = "0.5",  features = ["cors"] }
fs2                = "0.4"
tempfile           = "3"
bonsai-runtime     = { path = "../bonsai-runtime" }

serenity       = { version = "0.12", optional = true, features = ["client","gateway","model","http","cache"] }
teloxide       = { version = "0.13", optional = true, features = ["macros","ctrlc_handler"] }
matrix-sdk     = { version = "0.7",  optional = true, default-features = false, features = ["e2e-encryption", "rustls-tls"] }
async-imap     = { version = "0.9",  optional = true }
async-native-tls = { version = "0.5", optional = true }

[[bin]]
name = "bonsai-bot"
path = "src/main.rs"
