[package]
name = "bonsai-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
which = "6"

# Optional, feature-gated wasmtime support for in-process WASM hosting
wasmtime = { version = "8", optional = true, features = ["wat"] }
wasmtime-wasi = { version = "8", optional = true }

[dev-dependencies]
tempdir = "0.3"

[features]
default = []
wasmtime-host = ["wasmtime", "wasmtime-wasi"]

[lib]
name = "bonsai_runtime"
path = "src/lib.rs"
