[package]
name        = "bonsai-daemon"
version     = "0.1.0"
edition     = "2021"
description = "Headless Bonsai service — WebSocket JSON-RPC bridge for VSCode and other clients"

[[bin]]
name = "bonsai-daemon"
path = "src/main.rs"

[dependencies]
bonsai-transfer-crypto = { path = "../crates/bonsai-transfer-crypto" }
bonsai-transfer-store  = { path = "../crates/bonsai-transfer-store" }
bonsai-transfer-core   = { path = "../crates/bonsai-transfer-core" }
bonsai-mailbox         = { path = "../crates/bonsai-mailbox" }
bonsai-query           = { path = "../crates/bonsai-query" }
bonsai-array           = { path = "../crates/bonsai-array" }
bonsai-verify-lean     = { path = "../crates/bonsai-verify-lean" }
bonsai-verify-fstar    = { path = "../crates/bonsai-verify-fstar" }
bonsai-verify-tla      = { path = "../crates/bonsai-verify-tla" }
bonsai-ci              = { path = "../crates/bonsai-ci" }

tokio        = { version = "1", features = ["full"] }
axum         = { version = "0.7", features = ["ws", "macros"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rand         = "0.8"
blake3       = "1"
hex          = "0.4"
dirs         = "5"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow       = "1"
tokio-tungstenite = { version = "0.21", optional = true }
uuid = { version = "1" }
bonsai-actors        = { path = "../crates/bonsai-actors" }
bonsai-cas           = { path = "../crates/bonsai-cas" }
bonsai-tool-registry = { path = "../crates/bonsai-tool-registry" }
bonsai-skills        = { path = "../crates/bonsai-skills" }
bonsai-skill-compiler      = { path = "../crates/bonsai-skill-compiler" }
bonsai-verify-coq          = { path = "../crates/bonsai-verify-coq" }
bonsai-verify-agda         = { path = "../crates/bonsai-verify-agda" }
bonsai-verify-isabelle     = { path = "../crates/bonsai-verify-isabelle" }
bonsai-capability-registry = { path = "../crates/bonsai-capability-registry" }
bonsai-sylva               = { path = "../crates/bonsai-sylva" }
bonsai-p2p      = { path = "../crates/bonsai-p2p" }
bonsai-creator  = { path = "../crates/bonsai-creator" }
arc-swap      = "1"
sysinfo       = "0.30"
