[package]
name = "bonsai-workspace"
version = "0.2.0"
edition = "2021"

[lib]
name = "bonsai_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri                        = { version = "2", features = ["protocol-asset", "devtools", "tray-icon", "custom-protocol"] }
tauri-plugin-fs              = "2"
tauri-plugin-shell           = "2"
tauri-plugin-dialog          = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state    = "2"

serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
toml        = "0.8"
blake3      = "1"
serde_yaml  = "0.9"
once_cell   = "1"
tauri-specta     = { version = "=2.0.0-rc.25", features = ["typescript"] }
specta           = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "=0.0.12"
anyhow      = "1.0"
thiserror   = "1.0"
dirs        = "5.0"

reqwest     = { version = "0.12", default-features = false, features = ["stream", "json", "multipart", "rustls-tls"] }
tokio       = { version = "1",    features = ["full"] }
tokio-stream = "0.1"
futures     = "0.3"
async-trait = "0.1"

image       = "0.24"
base64      = "0.21"

sysinfo   = "0.30"
walkdir   = "2"
globset   = "0.4"
rand      = "0.8"

sqlx             = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# Provide a statically-linked SQLite so we don't depend on a system installation.
# In sqlx 0.8 the "bundled" flag moved here from sqlx itself.
libsqlite3-sys   = { version = "0.30", features = ["bundled"] }

cpal  = "0.15"
hound = "3.5"

chrono   = { version = "0.4", features = ["serde"] }
uuid     = { version = "1",   features = ["v4"] }
sha2     = "0.10"
hmac     = "0.12"
aes-gcm  = "0.10"
keyring  = "2"
lettre   = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }
rodio    = { version = "0.17", default-features = false, features = ["wav"] }

wasmtime     = { version = "20", default-features = false, features = ["cranelift", "runtime", "component-model"] }
diffy        = "0.3"
zip          = { version = "0.6", default-features = false, features = ["deflate"] }
axum         = { version = "0.7", default-features = false, features = ["macros", "json", "tokio", "http1", "ws"] }
qrcode       = "0.13"
local-ip-address = "0.6"
mdns-sd      = "0.11"
gethostname  = "0.4"
tower-http   = { version = "0.5", features = ["cors"] }
bytes        = "1"
regex        = "1"
pulldown-cmark = "0.11"
libc           = "0.2"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender   = "0.2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
git2         = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
portable-pty = "0.8"
scrap        = "0.5"
enigo        = "0.0.14"

bonsai-native = { path = "../../bonsai-native", optional = true }

[features]
native-gpu = ["bonsai-native"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
