[package]
name = "bonsai-workspace"
version = "0.2.0"
edition = "2021"

[lib]
name = "bonsai_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
bonsai-skill-compiler = { path = "../../crates/bonsai-skill-compiler" }
bonsai-capability-registry = { path = "../../crates/bonsai-capability-registry" }
bonsai-query = { path = "../../crates/bonsai-query" }
bonsai-cas    = { path = "../../crates/bonsai-cas" }
bonsai-ir     = { path = "../../crates/bonsai-ir" }
bonsai-crdt   = { path = "../../crates/bonsai-crdt" }
bonsai-actors = { path = "../../crates/bonsai-actors" }
bonsai-chess  = { path = "../../crates/bonsai-chess" }
bonsai-go     = { path = "../../crates/bonsai-go" }
mlua          = { version = "0.10", features = ["lua54", "vendored", "async", "serialize", "send"] }
tauri                        = { version = "2", features = ["protocol-asset", "devtools", "tray-icon", "custom-protocol"] }
tauri-plugin-fs              = "2"
tauri-plugin-shell           = "2"
tauri-plugin-dialog          = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state    = "2"

serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
toml        = "0.8"
blake3      = "1"
serde_yaml  = "0.9"
once_cell   = "1"
tauri-specta     = { version = "=2.0.0-rc.25", features = ["typescript"] }
specta           = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "=0.0.12"
anyhow      = "1.0"
thiserror   = "1.0"
dirs        = "5.0"

reqwest     = { version = "0.12", default-features = false, features = ["stream", "json", "multipart", "rustls-tls"] }
tokio       = { version = "1",    features = ["full"] }
tokio-stream = "0.1"
futures     = "0.3"
async-trait = "0.1"

image       = "0.24"
base64      = "0.21"

sysinfo   = "0.30"
walkdir   = "2"
globset   = "0.4"
rand      = "0.8"

sqlx             = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# Provide a statically-linked SQLite so we don't depend on a system installation.
# In sqlx 0.8 the "bundled" flag moved here from sqlx itself.
libsqlite3-sys   = { version = "0.30", features = ["bundled"] }

cpal  = "0.15"
hound    = "3.5"
fastrand = "2"

chrono   = { version = "0.4", features = ["serde"] }
uuid     = { version = "1",   features = ["v4", "serde"] }
sha2     = "0.10"
hmac     = "0.12"
aes-gcm  = "0.10"
keyring  = "2"
lettre   = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }
rodio    = { version = "0.17", default-features = false, features = ["wav"] }
automerge = "0.5"

wasmtime     = { version = "20", default-features = false, features = ["cranelift", "runtime", "component-model"] }
diffy        = "0.3"
zip          = { version = "0.6", default-features = false, features = ["deflate"] }
axum         = { version = "0.7", default-features = false, features = ["macros", "json", "tokio", "http1", "ws"] }
hyper        = { version = "0.14", features = ["server", "tcp", "http1", "runtime"] }
qrcode       = "0.13"
local-ip-address = "0.6"
mdns-sd      = "0.11"
gethostname  = "0.4"
tower-http   = { version = "0.5", features = ["cors"] }
bytes        = "1"
regex        = "1"
pulldown-cmark = "0.11"
libc           = "0.2"

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender   = "0.2"

# Tool ecosystem
notify    = { version = "6.1", features = ["macos_fsevent"] }  # filesystem watcher for cache invalidation
scraper   = "0.19"             # HTML scraping & structured extraction
battery   = "0.7"              # cross-platform battery status
gif       = "0.13"             # GIF encoding for animated image tool
lopdf     = "0.33"             # PDF text extraction (offline)
sqlparser = { version = "0.49", default-features = false }  # SQL formatting & analysis
zxcvbn    = "3"                # offline password strength estimation
ssh-key   = { version = "0.6", features = ["ed25519", "getrandom"] }  # SSH key generation
symphonia = { version = "0.5", default-features = false, features = ["wav", "mp3", "aac", "ogg", "flac", "isomp4", "mkv"] }  # audio decoding for waveform
feed-rs   = "2"                # RSS/Atom feed parsing

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
git2         = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
portable-pty = "0.8"
scrap        = "0.5"
enigo        = "0.0.14"

bonsai-native = { path = "../../bonsai-native", optional = true }

[[bin]]
name = "bonsai-music-worker"
path = "src/bin/music_worker.rs"

[features]
native-gpu = ["bonsai-native"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
