[package]
name = "bonsai-actors"
version = "0.1.0"
edition = "2021"

[dependencies]
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio     = { version = "1", features = ["full"] }
uuid      = { version = "1", features = ["v4"] }
dashmap     = "6"
thiserror   = "1"
async-trait = "0.1"

[features]
default = []
