[package]
name = "bonsai-actors"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1", features = ["full"] }
uuid        = { version = "1", features = ["v4", "serde"] }
dashmap     = "6"
thiserror   = "1"
async-trait = "0.1"
# CBOR serialisation for the transport layer
ciborium    = "0.2"
tracing     = "0.1"
arc-swap    = "1"
sysinfo     = "0.30"

[features]
default = []
