[package]
name = "bonsai-capability-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1"
tokio = { version = "1", features = ["sync"] }
# small utilities
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
