[package]
name = "bonsai-cas"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3    = "1"
hex       = "0.4"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx      = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
tokio     = { version = "1", features = ["full"] }
thiserror = "1"

[features]
default = []
