[package]
name = "bonsai-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
shakmaty   = { version = "0.27", features = ["variant"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand       = "0.8"
uuid       = { version = "1", features = ["v4", "serde"] }
thiserror  = "1"
tracing    = "0.1"
chrono     = { version = "0.4", features = ["serde"] }
bonsai-crdt   = { path = "../bonsai-crdt" }
bonsai-actors = { path = "../bonsai-actors" }
async-trait   = "0.1"
tokio         = { version = "1", features = ["full"] }

[features]
default = []
