[package]
name = "bonsai-ci"
version = "0.1.0"
edition = "2021"

[lib]
name = "bonsai_ci"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# local workspace crates (keep as path deps so the workspace links cleanly)
bonsai-capability-registry = { path = "../bonsai-capability-registry" }
bonsai-actors = { path = "../bonsai-actors" }
