[package]
name    = "bonsai-creator"
version = "0.1.0"
edition = "2021"
description = "Multi-modal generative AI tools: image, video, 3D, audio, Gaussian splatting, fine-tuning"

[features]
default = ["image-gen", "video-gen", "threed-gen", "audio-gen"]
image-gen  = []
video-gen  = []
threed-gen = []
audio-gen  = []

[dependencies]
bonsai-cas          = { path = "../bonsai-cas" }
bonsai-actors       = { path = "../bonsai-actors" }
bonsai-tool-registry = { path = "../bonsai-tool-registry" }
bonsai-sylva        = { path = "../bonsai-sylva" }

tokio        = { version = "1", features = ["full"] }
anyhow       = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
async-trait  = "0.1"
image        = { version = "0.25", features = ["png"] }
rand         = "0.8"
wgpu         = "0.19"
bytemuck     = { version = "1", features = ["derive"] }
tokio-stream = "0.1"
reqwest      = { version = "0.12", features = ["json", "stream"] }
tracing      = "0.1"
