[package]
name    = "bonsai-dataframe"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.46", features = [
    "lazy",
    "csv",
    "json",
    "parquet",
    "dtype-full",
    "strings",
    "temporal",
    "regex",
    "random",
    "cumulative_eval",
    "rank",
    "describe",
] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tracing     = "0.1"
