[package]
name = "bonsai-go-nn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
candle-core = { version = "0.8" }
candle-nn = "0.8"
candle-transformers = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bonsai-go = { path = "../bonsai-go" }
bonsai-cas = { path = "../bonsai-cas" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
rand = "0.8"
rand_distr = "0.4"

[features]
default = []
cuda  = ["candle-core/cuda"]
metal = ["candle-core/metal"]
