[package]
name = "bonsai-go"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand       = "0.8"
uuid       = { version = "1", features = ["v4", "serde"] }
thiserror  = "1"
tracing    = "0.1"
chrono     = { version = "0.4", features = ["serde"] }

[features]
default = []
