[package]
name = "bonsai-knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
uuid        = { version = "1", features = ["v4", "serde"] }
dashmap     = "6"
chrono      = { version = "0.4", features = ["serde"] }
thiserror   = "1"
tracing     = "0.1"
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
rand        = "0.8"
bonsai-verify = { path = "../bonsai-verify" }

[features]
default = []
