[package]
name        = "bonsai-mailbox"
version     = "0.1.0"
edition     = "2021"
description = "Agent-to-agent secure mailbox for Bonsai swarm communication"

[dependencies]
bonsai-transfer-crypto = { path = "../bonsai-transfer-crypto" }
bonsai-transfer-core   = { path = "../bonsai-transfer-core" }
bonsai-relay           = { path = "../bonsai-relay" }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
uuid         = { version = "1", features = ["v4", "serde"] }
tracing      = "0.1"
dashmap      = "5"
