[package]
name        = "bonsai-p2p"
version     = "0.1.0"
edition     = "2021"
description = "Bonsai P2P transport lanes: WebRTC DataChannel, libp2p Swarm, and Tor onion routing"

[features]
default       = ["webrtc-lane", "swarm-lane", "onion-lane"]
webrtc-lane   = ["dep:webrtc", "dep:bytes"]
swarm-lane    = ["dep:libp2p"]
# Onion lane connects through a running Tor SOCKS5 proxy (default 127.0.0.1:9050).
# Using tokio-socks avoids the libsqlite3-sys conflict that arti-client introduces.
onion-lane    = ["dep:tokio-socks"]

[dependencies]
bonsai-transfer-core   = { path = "../bonsai-transfer-core" }
bonsai-transfer-crypto = { path = "../bonsai-transfer-crypto" }

tokio       = { version = "1", features = ["full"] }
futures     = "0.3"
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
bincode     = "1"
tracing     = "0.1"
anyhow      = "1"
thiserror   = "1"

# WebRTC DataChannel lane
webrtc = { version = "0.11", optional = true }
bytes  = { version = "1",    optional = true }

# libp2p Kademlia / request-response swarm lane
libp2p = { version = "0.54", optional = true, features = [
    "tokio", "tcp", "noise", "yamux",
    "kad", "identify", "request-response",
    "cbor", "macros", "dns",
] }

# Onion lane — SOCKS5 through system Tor daemon (no sqlite dependency)
tokio-socks = { version = "0.5", optional = true }
