[package]
name = "bonsai-query"
version = "0.1.0"
edition = "2021"

[dependencies]
bonsai-capability-registry = { path = "../bonsai-capability-registry" }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "1"
# Datalog engine (bottom-up fixpoint)
datafrog    = "2"
# Embedded SQL (100% offline)
rusqlite    = { version = "0.32", features = ["bundled"] }

[features]
default = []
