[package]
name        = "bonsai-relay"
version     = "0.1.0"
edition     = "2021"
description = "Blind relay client/server for Bonsai peer-to-peer transfer"

[dependencies]
bonsai-transfer-crypto = { path = "../bonsai-transfer-crypto" }
bonsai-transfer-core   = { path = "../bonsai-transfer-core" }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
blake3       = "1"
rand         = "0.8"
uuid         = { version = "1", features = ["v4", "serde"] }
tracing      = "0.1"
async-trait  = "0.1"
dashmap      = "5"
hex          = "0.4"
