[package]
name    = "bonsai-ring"
version = "0.1.0"
edition = "2021"
description = "Zero-copy DMI ring-channel transport lane (Linux-only hugepage-backed SPSC)"

[dependencies]
bonsai-transfer-core   = { path = "../bonsai-transfer-core" }
bonsai-transfer-crypto = { path = "../bonsai-transfer-crypto" }
async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
tokio       = { version = "1", features = ["sync", "rt"] }
tracing     = "0.1"
thiserror   = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
