[package]
name = "bonsai-skill-compiler"
version = "0.1.0"
edition = "2021"
description = "Compiles Skills.sh markdown skills into native Bonsai WASM tools"

[dependencies]
anyhow      = "1.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
serde_yaml  = "0.9"
tokio       = { version = "1.0", features = ["full"] }
uuid        = { version = "1.0", features = ["v4"] }
sha2        = "0.10"
walkdir     = "2"
tracing     = "0.1"
dirs        = "5.0"
wasm-encoder = "0.200"
reqwest    = { version = "0.12", features = ["json"] }
