[package]
name = "bonsai-skills"
version = "0.1.0"
edition = "2021"

[dependencies]
bonsai-tool-registry    = { path = "../bonsai-tool-registry" }
bonsai-skill-compiler   = { path = "../bonsai-skill-compiler" }
notify   = "6"
tracing  = "0.1"
anyhow   = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = { version = "8", features = ["wat"] }
