[package]
name = "bonsai-sylva"
version = "0.1.0"
edition = "2021"
description = "Native Sylva language interpreter — the scripting layer of Bonsai/OmniSystem"

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "1"
tracing     = "0.1"
indexmap    = "2"          # ordered maps for stable environment snapshots
bonsai-ir   = { path = "../bonsai-ir" }

[features]
default = []
