[package]
name = "bonsai-tool-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
bonsai-skill-compiler = { path = "../bonsai-skill-compiler" }
arc-swap    = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
blake3      = "1"
hex         = "0.4"
