[package]
name    = "bonsai-transfer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bonsai-transfer-crypto = { path = "../bonsai-transfer-crypto" }
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
tracing    = "0.1"
blake3     = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
bytes      = "1"
