[package]
name    = "bonsai-transfer-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Classical cryptography
x25519-dalek   = { version = "2", features = ["static_secrets"] }
ed25519-dalek  = { version = "2", features = ["rand_core"] }
aes-gcm        = "0.10"
blake3         = "1"
argon2         = "0.5"
rand           = "0.8"
rand_core      = "0.6"
zeroize        = { version = "1", features = ["derive"] }

# BIP-39 recovery phrases
bip39          = "2"

serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "1"
hex            = "0.4"
