[package]
name        = "bonsai-transfer-store"
version     = "0.1.0"
edition     = "2021"
description = "Encrypted persistent store for Bonsai transfer state and identity"

[dependencies]
bonsai-transfer-crypto = { path = "../bonsai-transfer-crypto" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
aes-gcm      = "0.10"
blake3       = "1"
argon2       = "0.5"
rand         = "0.8"
zeroize      = { version = "1", features = ["derive"] }
dirs         = "5"
