# Standalone crate — deliberately NOT in the workspace due to rusqlite/libsqlite3-sys
# version conflict with sqlx. Build with:
#   cargo build --manifest-path crates/bonsai-watchdog/Cargo.toml --release
[workspace]

[package]
name    = "bonsai-watchdog"
version = "0.1.0"
edition = "2021"
description = "Survival-system watchdog: launches Bonsai, monitors health, and auto-repairs on failure"

[[bin]]
name = "bonsai-watchdog"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite       = { version = "0.31", features = ["bundled"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo        = "0.30"
sha2           = "0.10"
blake3         = "1"
rand           = "0.8"
anyhow         = "1"
dirs           = "5"
